// Copyright Istio Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = 'proto3';

package v1alpha1;

// Package-wide variables from generator "generated".
option go_package = "v1alpha1";

// Spec for the in-cluster MDP upgrade controller.
message MDPConfigSpec {
  // Channel that this spec applies to.
  string channel = 10;

  // The new/upgrade target version of the proxy in the cluster.
  string proxy_version = 20;
  // Percent of proxies which should be at proxy_version. Only auto-injected proxies belonging
  // to Deployments and ReplicaSets in the channel above are considered in the calculation.
  // 0 means that the controller will not auto upgrade any proxy in the cluster.
  // The actual percent may vary depending on quantization due to the total number of proxies.
  // Actual percentage will be rounded down to the nearest value, but never rounded to zero
  // if proxy_target_pct > 0.
  float proxy_target_pct = 21;
}

// Status for the MDP controller.
message MDPStatus {
  enum Status {
    UNKNOWN = 0;
    // The actual state has not yet reached the declared state.
    RECONCILING = 1;
    // The actual state reflects the declared state.
    READY = 2;
    // The controller encountered an error, with further information in the errorMsg field.
    ERROR = 3;
  }

  // The current status of the controller.
  Status status = 1;
  // Error code, if status is ERROR.
  int32 error_code = 5;
  // Error message, if status is ERROR.
  string error_msg = 6;
  // The actual percent of proxies at the new version.
  float proxy_target_version_actual_pct = 10;

  // The generation observed by the MDP controller.
  int32 observed_generation = 20;
}

